llvm/dev/backward.llvm.bc.err
/usr/lib/llvm-3.8/bin/llvm-as: llvm/dev/backward.llvm:15:1: error: expected instruction opcode
}
^
